// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal authors controller DELETE /internal/authors/:id Удаляет и возвращает удаленного автора 1`] = `
Object {
  "createdAt": "2021-09-08T12:30:35.000Z",
  "id": 1,
  "lastEditedAt": "2021-09-08T12:30:35.000Z",
  "name": "Редакция Авто.ру",
  "position": "editor",
  "socialNetworks": Array [
    Object {
      "authorId": 1,
      "createdAt": "2021-09-08T12:30:35.000Z",
      "id": 1,
      "lastEditedAt": "2021-09-08T12:30:35.000Z",
      "type": "vk",
      "url": "https://vk.com/id456",
    },
  ],
  "urlPart": "redakciya-avtoru",
}
`;

exports[`Internal authors controller GET /internal/authors Возвращает всех авторов 1`] = `
Array [
  Object {
    "createdAt": "2021-09-08T12:30:35.000Z",
    "id": 1,
    "lastEditedAt": "2021-09-08T12:30:35.000Z",
    "name": "test",
    "photo": Object {
      "group-id": 1399832,
      "imagename": "car.jpeg_1648103509611",
      "meta": Object {
        "crc64": "24D5842733EDC82E",
        "md5": "c4782f6be1710b107031cee0a8b42da3",
        "modification-time": 1648103509,
        "orig-animated": false,
        "orig-format": "JPEG",
        "orig-orientation": "0",
        "orig-size": Object {
          "x": 598,
          "y": 336,
        },
        "orig-size-bytes": 19697,
        "processed_by_computer_vision": false,
        "processed_by_computer_vision_description": "computer vision is disabled",
        "processing": "finished",
      },
      "sizes": Object {
        "1098x1098": Object {
          "height": 336,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1098x1098",
          "width": 598,
        },
        "1200x1200": Object {
          "height": 336,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1200x1200",
          "width": 598,
        },
        "1200х1200": Object {
          "height": 336,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1200х1200",
          "width": 598,
        },
        "1252x1252": Object {
          "height": 336,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1252x1252",
          "width": 598,
        },
        "1428x1428": Object {
          "height": 336,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1428x1428",
          "width": 598,
        },
        "1600x1600": Object {
          "height": 336,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1600x1600",
          "width": 598,
        },
        "1920x1920": Object {
          "height": 336,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1920x1920",
          "width": 598,
        },
        "200x200": Object {
          "height": 112,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/200x200",
          "width": 200,
        },
        "2560x2560": Object {
          "height": 336,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/2560x2560",
          "width": 598,
        },
        "296x296": Object {
          "height": 166,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/296x296",
          "width": 296,
        },
        "320x320": Object {
          "height": 180,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/320x320",
          "width": 320,
        },
        "320х320": Object {
          "height": 180,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/320х320",
          "width": 320,
        },
        "338x338": Object {
          "height": 190,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/338x338",
          "width": 338,
        },
        "385x385": Object {
          "height": 216,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/385x385",
          "width": 385,
        },
        "439x439": Object {
          "height": 247,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/439x439",
          "width": 439,
        },
        "460x460": Object {
          "height": 258,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/460x460",
          "width": 460,
        },
        "460х460": Object {
          "height": 258,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/460х460",
          "width": 460,
        },
        "500x500": Object {
          "height": 281,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/500x500",
          "width": 500,
        },
        "571x571": Object {
          "height": 321,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/571x571",
          "width": 571,
        },
        "650x650": Object {
          "height": 336,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/650x650",
          "width": 598,
        },
        "741x741": Object {
          "height": 336,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/741x741",
          "width": 598,
        },
        "845x845": Object {
          "height": 336,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/845x845",
          "width": 598,
        },
        "964x964": Object {
          "height": 336,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/964x964",
          "width": 598,
        },
        "optimize": Object {
          "height": 336,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/optimize",
          "width": 598,
        },
        "orig": Object {
          "height": 336,
          "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/orig",
          "width": 598,
        },
      },
    },
    "position": "author",
    "socialNetworks": Array [
      Object {
        "authorId": 1,
        "createdAt": "2021-09-08T12:30:35.000Z",
        "id": 1,
        "lastEditedAt": "2021-09-08T12:30:35.000Z",
        "type": "vk",
        "url": "https://vk.com/id111",
      },
      Object {
        "authorId": 1,
        "createdAt": "2021-09-08T12:30:35.000Z",
        "id": 2,
        "lastEditedAt": "2021-09-08T12:30:35.000Z",
        "type": "vk",
        "url": "https://vk.com/id222",
      },
    ],
    "urlPart": "test",
  },
  Object {
    "createdAt": "2021-09-08T12:30:35.000Z",
    "id": 2,
    "lastEditedAt": "2021-09-08T12:30:35.000Z",
    "name": "Александр Груздев",
    "position": "editor",
    "socialNetworks": Array [],
    "urlPart": "aleksandr-gruzdev",
  },
  Object {
    "createdAt": "2021-09-08T12:30:35.000Z",
    "id": 3,
    "lastEditedAt": "2021-09-08T12:30:35.000Z",
    "name": "Александр Евдокимов",
    "position": "editor",
    "socialNetworks": Array [
      Object {
        "authorId": 3,
        "createdAt": "2021-09-08T12:30:35.000Z",
        "id": 3,
        "lastEditedAt": "2021-09-08T12:30:35.000Z",
        "type": "vk",
        "url": "https://vk.com/aleksand-evdokimov",
      },
    ],
    "urlPart": "aleksandr-evdokimov",
  },
]
`;

exports[`Internal authors controller GET /internal/authors/:id Возвращает автора 1`] = `
Object {
  "createdAt": "2021-09-08T12:30:35.000Z",
  "id": 1,
  "lastEditedAt": "2021-09-08T12:30:35.000Z",
  "name": "test",
  "photo": Object {
    "group-id": 1399832,
    "imagename": "car.jpeg_1648103509611",
    "meta": Object {
      "crc64": "24D5842733EDC82E",
      "md5": "c4782f6be1710b107031cee0a8b42da3",
      "modification-time": 1648103509,
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-orientation": "0",
      "orig-size": Object {
        "x": 598,
        "y": 336,
      },
      "orig-size-bytes": 19697,
      "processed_by_computer_vision": false,
      "processed_by_computer_vision_description": "computer vision is disabled",
      "processing": "finished",
    },
    "sizes": Object {
      "1098x1098": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1098x1098",
        "width": 598,
      },
      "1200x1200": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1200x1200",
        "width": 598,
      },
      "1200х1200": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1200х1200",
        "width": 598,
      },
      "1252x1252": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1252x1252",
        "width": 598,
      },
      "1428x1428": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1428x1428",
        "width": 598,
      },
      "1600x1600": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1600x1600",
        "width": 598,
      },
      "1920x1920": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1920x1920",
        "width": 598,
      },
      "200x200": Object {
        "height": 112,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/200x200",
        "width": 200,
      },
      "2560x2560": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/2560x2560",
        "width": 598,
      },
      "296x296": Object {
        "height": 166,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/296x296",
        "width": 296,
      },
      "320x320": Object {
        "height": 180,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/320x320",
        "width": 320,
      },
      "320х320": Object {
        "height": 180,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/320х320",
        "width": 320,
      },
      "338x338": Object {
        "height": 190,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/338x338",
        "width": 338,
      },
      "385x385": Object {
        "height": 216,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/385x385",
        "width": 385,
      },
      "439x439": Object {
        "height": 247,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/439x439",
        "width": 439,
      },
      "460x460": Object {
        "height": 258,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/460x460",
        "width": 460,
      },
      "460х460": Object {
        "height": 258,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/460х460",
        "width": 460,
      },
      "500x500": Object {
        "height": 281,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/500x500",
        "width": 500,
      },
      "571x571": Object {
        "height": 321,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/571x571",
        "width": 571,
      },
      "650x650": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/650x650",
        "width": 598,
      },
      "741x741": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/741x741",
        "width": 598,
      },
      "845x845": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/845x845",
        "width": 598,
      },
      "964x964": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/964x964",
        "width": 598,
      },
      "optimize": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/optimize",
        "width": 598,
      },
      "orig": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/orig",
        "width": 598,
      },
    },
  },
  "position": "author",
  "socialNetworks": Array [
    Object {
      "authorId": 1,
      "createdAt": "2021-09-08T12:30:35.000Z",
      "id": 1,
      "lastEditedAt": "2021-09-08T12:30:35.000Z",
      "type": "vk",
      "url": "https://vk.com/id111",
    },
    Object {
      "authorId": 1,
      "createdAt": "2021-09-08T12:30:35.000Z",
      "id": 2,
      "lastEditedAt": "2021-09-08T12:30:35.000Z",
      "type": "vk",
      "url": "https://vk.com/id222",
    },
  ],
  "urlPart": "test",
}
`;

exports[`Internal authors controller POST /internal/authors Создает и возвращает нового автора 1`] = `
Object {
  "createdAt": "2021-09-08T12:30:35.000Z",
  "id": 1,
  "lastEditedAt": "2021-09-08T12:30:35.000Z",
  "name": "test",
  "photo": Object {
    "group-id": 1399832,
    "imagename": "car.jpeg_1648103509611",
    "meta": Object {
      "crc64": "24D5842733EDC82E",
      "md5": "c4782f6be1710b107031cee0a8b42da3",
      "modification-time": 1648103509,
      "orig-animated": false,
      "orig-format": "JPEG",
      "orig-orientation": "0",
      "orig-size": Object {
        "x": 598,
        "y": 336,
      },
      "orig-size-bytes": 19697,
      "processed_by_computer_vision": false,
      "processed_by_computer_vision_description": "computer vision is disabled",
      "processing": "finished",
    },
    "sizes": Object {
      "1098x1098": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1098x1098",
        "width": 598,
      },
      "1200x1200": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1200x1200",
        "width": 598,
      },
      "1200х1200": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1200х1200",
        "width": 598,
      },
      "1252x1252": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1252x1252",
        "width": 598,
      },
      "1428x1428": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1428x1428",
        "width": 598,
      },
      "1600x1600": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1600x1600",
        "width": 598,
      },
      "1920x1920": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/1920x1920",
        "width": 598,
      },
      "200x200": Object {
        "height": 112,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/200x200",
        "width": 200,
      },
      "2560x2560": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/2560x2560",
        "width": 598,
      },
      "296x296": Object {
        "height": 166,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/296x296",
        "width": 296,
      },
      "320x320": Object {
        "height": 180,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/320x320",
        "width": 320,
      },
      "320х320": Object {
        "height": 180,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/320х320",
        "width": 320,
      },
      "338x338": Object {
        "height": 190,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/338x338",
        "width": 338,
      },
      "385x385": Object {
        "height": 216,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/385x385",
        "width": 385,
      },
      "439x439": Object {
        "height": 247,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/439x439",
        "width": 439,
      },
      "460x460": Object {
        "height": 258,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/460x460",
        "width": 460,
      },
      "460х460": Object {
        "height": 258,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/460х460",
        "width": 460,
      },
      "500x500": Object {
        "height": 281,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/500x500",
        "width": 500,
      },
      "571x571": Object {
        "height": 321,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/571x571",
        "width": 571,
      },
      "650x650": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/650x650",
        "width": 598,
      },
      "741x741": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/741x741",
        "width": 598,
      },
      "845x845": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/845x845",
        "width": 598,
      },
      "964x964": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/964x964",
        "width": 598,
      },
      "optimize": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/optimize",
        "width": 598,
      },
      "orig": Object {
        "height": 336,
        "path": "/get-vertis-journal/1399832/car.jpeg_1648103509611/orig",
        "width": 598,
      },
    },
  },
  "position": "author",
  "socialNetworks": Array [
    Object {
      "authorId": 1,
      "createdAt": "2021-09-08T12:30:35.000Z",
      "id": 1,
      "lastEditedAt": "2021-09-08T12:30:35.000Z",
      "type": "vk",
      "url": "https://vk.com/id111",
    },
    Object {
      "authorId": 1,
      "createdAt": "2021-09-08T12:30:35.000Z",
      "id": 2,
      "lastEditedAt": "2021-09-08T12:30:35.000Z",
      "type": "vk",
      "url": "https://vk.com/id222",
    },
  ],
  "urlPart": "testovyi-avtor",
}
`;

exports[`Internal authors controller PUT /internal/authors/:id Обновляет и возвращает автора 1`] = `
Object {
  "createdAt": "2021-09-08T12:30:35.000Z",
  "id": 1,
  "lastEditedAt": "2021-09-08T12:30:35.000Z",
  "name": "Редакция Авто.ру",
  "photo": Object {
    "group-id": 1399832,
    "imagename": "kitten.png_1648055258930",
    "meta": Object {
      "crc64": "4004BBE4DFEBAD37",
      "md5": "b6db85a4300596c93045d977081768d1",
      "modification-time": 1648055259,
      "orig-animated": false,
      "orig-format": "PNG",
      "orig-orientation": "0",
      "orig-size": Object {
        "x": 1280,
        "y": 1280,
      },
      "orig-size-bytes": 1480201,
      "processed_by_computer_vision": false,
      "processed_by_computer_vision_description": "computer vision is disabled",
      "processing": "finished",
    },
    "sizes": Object {
      "1098x1098": Object {
        "height": 1098,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/1098x1098",
        "width": 1098,
      },
      "1200x1200": Object {
        "height": 1200,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/1200x1200",
        "width": 1200,
      },
      "1200х1200": Object {
        "height": 1200,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/1200х1200",
        "width": 1200,
      },
      "1252x1252": Object {
        "height": 1252,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/1252x1252",
        "width": 1252,
      },
      "1428x1428": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/1428x1428",
        "width": 1280,
      },
      "1600x1600": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/1600x1600",
        "width": 1280,
      },
      "1920x1920": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/1920x1920",
        "width": 1280,
      },
      "200x200": Object {
        "height": 200,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/200x200",
        "width": 200,
      },
      "2560x2560": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/2560x2560",
        "width": 1280,
      },
      "296x296": Object {
        "height": 296,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/296x296",
        "width": 296,
      },
      "320x320": Object {
        "height": 320,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/320x320",
        "width": 320,
      },
      "320х320": Object {
        "height": 320,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/320х320",
        "width": 320,
      },
      "338x338": Object {
        "height": 338,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/338x338",
        "width": 338,
      },
      "385x385": Object {
        "height": 385,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/385x385",
        "width": 385,
      },
      "439x439": Object {
        "height": 439,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/439x439",
        "width": 439,
      },
      "460x460": Object {
        "height": 460,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/460x460",
        "width": 460,
      },
      "460х460": Object {
        "height": 460,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/460х460",
        "width": 460,
      },
      "500x500": Object {
        "height": 500,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/500x500",
        "width": 500,
      },
      "571x571": Object {
        "height": 571,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/571x571",
        "width": 571,
      },
      "650x650": Object {
        "height": 650,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/650x650",
        "width": 650,
      },
      "741x741": Object {
        "height": 741,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/741x741",
        "width": 741,
      },
      "845x845": Object {
        "height": 845,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/845x845",
        "width": 845,
      },
      "964x964": Object {
        "height": 964,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/964x964",
        "width": 964,
      },
      "optimize": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/optimize",
        "width": 1280,
      },
      "orig": Object {
        "height": 1280,
        "path": "/get-vertis-journal/1399832/kitten.png_1648055258930/orig",
        "width": 1280,
      },
    },
  },
  "position": "editor",
  "socialNetworks": Array [
    Object {
      "authorId": 1,
      "createdAt": "2021-09-08T12:30:35.000Z",
      "id": 3,
      "lastEditedAt": "2021-09-08T12:30:35.000Z",
      "type": "vk",
      "url": "https://vk.com/id456",
    },
  ],
  "urlPart": "redakciya-avtoru",
}
`;
